--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,25 +1,31 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "bento/ubuntu-24.04"
-  config.vm.box_version = "202510.26.0"
+  config.vm.box_version = "202508.03.0"
 
   config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
 
-  config.vm.network "private_network", ip: "192.168.33.10"
+  config.vm.network "private_network", ip: "192.168.56.67"
+
+  config.vm.synced_folder ".", "/vagrant", type: "virtiofs"
  
-  config.vm.provider "virtualbox" do |vb|
-    vb.gui = false
-    vb.memory = "6144"
-    vb.cpus = 2
+  config.vm.provider :libvirt do |libvirt|
+    libvirt.memory = "6144"
+    libvirt.cpus = 2
+    libvirt.memorybacking :access, :mode => 'shared'
   end
+
   config.vm.provision "shell", inline: <<-SHELL
 
-    bash /vagrant/files/dockerup.sh
+    bash /vagrant/dockerup.sh
 
     systemctl enable --now docker
 
     docker compose -f /vagrant/traefik/docker-compose.yml --progress quiet up -d
     
     docker compose --env-file /vagrant/weebify/.env -f /vagrant/weebify/docker-compose.yml --progress quiet up -d
-
+    
+    sleep 5
+    
+    docker compose --env-file /vagrant/weebify/.env -f /vagrant/weebify/docker-compose.yml restart
   SHELL
 end
